correct cms IntroText for demo

--- a/idp-connector-demo/cms/cms.yaml
+++ b/idp-connector-demo/cms/cms.yaml
@@ -6,6 +6,6 @@ Dialogs:
           connector:
             demo:
               ExtractionResult:
-                IntroText: The fields below show the results of the extraction perfomed by Axon Ivy Intelligent Document Processing.
+                IntroText: The fields below shows the results of the extraction perfomed by Axon Ivy Intelligent Document Processing.
               SplittingResult:
-                IntroText: The list below show the results of the splitting perfomed by Axon Ivy Intelligent Document Processing.
+                IntroText: The list below shows the results of the splitting perfomed by Axon Ivy Intelligent Document Processing.
