--- a/idp-connector-demo/pom.xml
+++ b/idp-connector-demo/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.idp</groupId>
   <artifactId>idp-connector-demo</artifactId>
-  <version>10.0.0-SNAPSHOT</version>
+  <version>10.0.0</version>
   <packaging>iar</packaging>
   <dependencies>
     <dependency>
