--- a/idp-connector-demo/pom.xml
+++ b/idp-connector-demo/pom.xml
@@ -1,26 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.axonivy.connector.idp</groupId>
-  <artifactId>idp-connector-demo</artifactId>
-  <version>12.0.3-SNAPSHOT</version>
-  <packaging>iar</packaging>
-  <dependencies>
-    <dependency>
-      <groupId>com.axonivy.connector.idp</groupId>
-      <artifactId>idp-connector</artifactId>
-      <version>${project.version}</version>
-      <type>iar</type>
-    </dependency>
-  </dependencies>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>com.axonivy.ivy.ci</groupId>
-        <artifactId>project-build-plugin</artifactId>
-        <version>12.0.0</version>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.axonivy.connector.idp</groupId>
+	<artifactId>idp-connector-demo</artifactId>
+	<version>12.0.3-SNAPSHOT</version>
+	<packaging>iar</packaging>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>com.axonivy.connector.idp</groupId>
+			<artifactId>idp-connector</artifactId>
+			<version>${project.version}</version>
+			<type>iar</type>
+		</dependency>
+	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>com.axonivy.ivy.ci</groupId>
+				<artifactId>project-build-plugin</artifactId>
+				<version>12.0.0</version>
+				<extensions>true</extensions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
