--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axonivy.connector.idp</groupId>
 	<name>idp-connector</name>
 	<artifactId>idp-connector-modules</artifactId>
-	<version>12.0.3-SNAPSHOT</version>
+	<version>12.0.3</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,7 +18,7 @@
 	<scm>
 		<developerConnection>
 			scm:git:https://github.com/axonivy-market/${project.name}.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v12.0.3</tag>
 	</scm>
 
 	<build>
