--- a/idp-connector-product/pom.xml
+++ b/idp-connector-product/pom.xml
@@ -42,10 +42,12 @@
                 <copy todir="${project.build.directory}">
                   <fileset dir="../../" includes="doc/**" />
                 </copy>
+                <copy todir="${project.build.directory}">
+                  <fileset dir="." includes="README*.md" />
+                </copy>
                 <copy file="README.md" tofile="${project.build.directory}/README.md" />
                 <loadfile property="variables.yaml" srcFile="${variables.yaml.file}" encoding="UTF-8" failonerror="false" />
                 <replace file="${project.build.directory}/README.md" token="@variables.yaml@" value="${variables.yaml}" />
-                <copy file="README_DE.md" tofile="${project.build.directory}/README_DE.md" />
                 <replace file="${project.build.directory}/README_DE.md" token="@variables.yaml@" value="${variables.yaml}" />
               </target>
             </configuration>
