Encrypt password + remove dependency in import

--- a/idp-connector/config/variables.yaml
+++ b/idp-connector/config/variables.yaml
@@ -1,11 +1,3 @@
-# yaml-language-server: $schema=https://json-schema.axonivy.com/app/12.0.0/variables.json
-# == Variables ==
-#
-# You can define here your project Variables.
-# If you want to define/override a Variable for a specific Environment, 
-# add an additional ‘variables.yaml’ file in a subdirectory in the ‘Config’ folder: 
-# '<project>/Config/_<environment>/variables.yaml
-#
 Variables:
   idpConnector:
     # The proxy server URL
@@ -13,7 +5,8 @@ Variables:
     # API Key for "IDP Document Capturing API"
     #[password]
     apiKeySecret: ${decrypt:}
-    # Number of seconds to wait for the completion of document processing. If processing doesn't finish in this time, a URL for retrieving the results will be returned.
+    # Number of seconds to wait for the completion of document processing.
+    # If processing doesn't finish in this time, a URL for retrieving the results will be returned.
     waitFor: "120"
     # The default value for validation processing result's confidence values  
     confidenceMinValue: "0.8"
