--- a/idp-connector-product/pom.xml
+++ b/idp-connector-product/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.axonivy.connector.idp</groupId>
 	<artifactId>idp-connector-product</artifactId>
-	<version>12.0.5-SNAPSHOT</version>
+	<version>12.0.5</version>
 	<packaging>pom</packaging>
 
 	<properties>
