--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,3 +9,5 @@ on:
 jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/dev.yml@v6
+    secrets:
+      mvnArgs: -Didp.apiKeySecret=${{secrets.API_KEY_SECRET}}
