--- a/idp-connector-test/pom.xml
+++ b/idp-connector-test/pom.xml
@@ -48,6 +48,15 @@
 				<version>12.0.0</version>
 				<extensions>true</extensions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<systemPropertyVariables>
+						<apiKeySecret>${idp.apiKeySecret}</apiKeySecret>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
