--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>com.axonivy.connector.idp</groupId>
 	<name>idp-connector</name>
 	<artifactId>idp-connector-modules</artifactId>
-	<version>13.1.2</version>
+	<version>13.1.3-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +18,7 @@
 	<scm>
 		<developerConnection>
 			scm:git:https://github.com/axonivy-market/${project.name}.git</developerConnection>
-		<tag>v13.1.2</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<build>
