Add E2E workflow and test environment support
Introduced a new GitHub Actions workflow for end-to-end (E2E) testing and updated CI/CD workflows with explicit permissions. Enhanced the test suite to support a configurable test environment via system properties, allowing tests to run in either mock or real server contexts based on the environment. Added related constants and logic to select the test context dynamically.

--- a/idp-connector-test/pom.xml
+++ b/idp-connector-test/pom.xml
@@ -76,6 +76,7 @@
         <configuration>
           <systemPropertyVariables>
             <apiKeySecret>${idp.apiKeySecret}</apiKeySecret>
+            <testEnvironment>${testEnvironment}</testEnvironment>
           </systemPropertyVariables>
           <statelessTestsetReporter
             implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
