--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,11 +1,10 @@
 name: E2E-Build
 
 on:
-  push:
   schedule:
-    - cron:  '21 21 * * *'
+    - cron:  '0 1 * * 1'
   workflow_dispatch:
-
+  
 permissions:
   contents: read
   checks: write
@@ -14,4 +13,4 @@ jobs:
   build:
     uses: axonivy-market/github-workflows/.github/workflows/ci.yml@v6
     secrets:
-      mvnArgs: -Didp.apiKeySecret=${{secrets.API_KEY_SECRET}} "-DtestEnvironment=${{ secrets.END_2_END_TESTING_ENV }}"
+      mvnArgs: -Didp.apiKeySecret=${{secrets.API_KEY_SECRET}} -DtestEnvironment=E2E
