MARP-3004 demo : fix typo, process name, workfowId as global var

--- a/idp-connector-demo/config/variables.yaml
+++ b/idp-connector-demo/config/variables.yaml
@@ -1,12 +1,12 @@
-# yaml-language-server: $schema=https://json-schema.axonivy.com/app/12.0.0/variables.json
+# yaml-language-server: $schema=https://json-schema.axonivy.com/app/13.1.0/variables.json
 # == Variables ==
-# 
+#
 # You can define here your project Variables.
 # If you want to define/override a Variable for a specific Environment, 
 # add an additional ‘variables.yaml’ file in a subdirectory in the ‘Config’ folder: 
 # '<project>/Config/_<environment>/variables.yaml
 #
 Variables:
-  idpConnector:
-    waitFor: 120
-    apiKeySecret: ${decrypt:}
+  idpConnectorDemo:
+    # ID of the workflow that processes the submitted document. It can be either the name of a prebuilt workflow (e.g., invoice_extraction) or the ID of a custom workflow in UUID format.
+    workflowId: invoice_extraction
