MARP-3004 demo : fix typo, process name, workfowId as global var idp iframe vertical scroll

--- a/idp-connector-demo/config/variables.yaml
+++ b/idp-connector-demo/config/variables.yaml
@@ -1,11 +1,11 @@
 # == Variables ==
-# 
+#
 # You can define here your project Variables.
 # If you want to define/override a Variable for a specific Environment, 
 # add an additional ‘variables.yaml’ file in a subdirectory in the ‘Config’ folder: 
 # '<project>/Config/_<environment>/variables.yaml
 #
 Variables:
-  idpConnector:
-    waitFor: 120
-    apiKeySecret: ${decrypt:}
+  idpConnectorDemo:
+    # ID of the workflow that processes the submitted document. It can be either the name of a prebuilt workflow (e.g., invoice_extraction) or the ID of a custom workflow in UUID format.
+    workflowId: 'invoice_extraction'
