--- a/idp-connector-test/pom.xml
+++ b/idp-connector-test/pom.xml
@@ -40,6 +40,11 @@
       <groupId>com.axonivy.ivy.api</groupId>
       <artifactId>ivy-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>13.0.3</version>
+    </dependency>
   </dependencies>
   <repositories>
     <repository>
