--- a/idp-connector/pom.xml
+++ b/idp-connector/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.axonivy.connector.idp</groupId>
   <artifactId>idp-connector</artifactId>
-  <version>10.0.26</version>
+  <version>10.0.27-SNAPSHOT</version>
   <packaging>iar</packaging>
   <build>
     <plugins>
