--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.axonivy.connector.idp</groupId>
   <name>idp-connector</name>
   <artifactId>idp-connector-modules</artifactId>
-  <version>10.0.26</version>
+  <version>10.0.27-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -15,7 +15,7 @@
 
   <scm>
     <developerConnection>scm:git:https://github.com/axonivy-market/${project.name}.git</developerConnection>
-    <tag>v10.0.26</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <build>
