fix primefaces build by example

--- a/idp-connector-demo/pom.xml
+++ b/idp-connector-demo/pom.xml
@@ -23,6 +23,15 @@
       <artifactId>ivy-api</artifactId>
     </dependency>
   </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.primefaces</groupId>
+        <artifactId>primefaces</artifactId>
+        <version>13.0.17-LTS</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <repositories>
     <repository>
       <snapshots>
